--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "framer-motion": "^12.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
@@ -29,6 +30,8 @@
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
     "postcss-loader": "^8.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "style-loader": "^4.0.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
