--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-spinners": "^0.15.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "stockfish": "^16.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -29,6 +30,7 @@
     "babel-plugin-root-import": "^6.6.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "postcss-loader": "^8.1.1",
     "react-dnd": "^16.0.1",
