--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-spinners": "^0.15.0",
-    "redux": "^5.0.1",
-    "stockfish": "^16.0.0"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
