--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "ably": "^2.6.3",
     "dotenv-webpack": "^8.1.0",
     "framer-motion": "^12.0.6",
     "react": "^19.0.0",
