--- a/.babelrc
+++ b/.babelrc
@@ -9,7 +9,7 @@
                 "rootPathPrefix": "~/"                //  ~/ will now represent ./src    so you dont have to write ../../../../src
               },
               {
-                "rootPathSuffix": "./src/Pages/FindPlayers",
+                "rootPathSuffix": "./src/Pages",
                 "rootPathPrefix": "`/"
               }
             ]
