--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@karmaniverous/serify-deserify": "^2.0.11",
     "@reduxjs/toolkit": "^2.5.0",
     "dotenv-webpack": "^8.1.0",
     "framer-motion": "^12.0.6",
