--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-spinners": "^0.15.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "redux-deep-persist": "^1.0.7",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
