--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@karmaniverous/serify-deserify": "^2.0.11",
+    "@react-three/fiber": "^9.1.2",
     "@reduxjs/toolkit": "^2.5.0",
     "animejs": "^4.0.2",
     "dotenv-webpack": "^8.1.0",
@@ -23,7 +24,8 @@
     "react-spinners": "^0.15.0",
     "redux": "^5.0.1",
     "redux-deep-persist": "^1.0.7",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "three": "^0.176.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
